<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ExportActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingTop="72dp">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_backup"
                android:layout_marginTop="16dp"
                android:textColor="@color/primary"
                android:textSize="28sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0.02"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export"
                style="@style/EnhancedTitleText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exportTxtButton"
                style="@style/PinkButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/export_txt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exportPdfButton"
                style="@style/PinkButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/export_pdf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/backup"
                style="@style/EnhancedTitleText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backupButton"
                style="@style/PinkButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/backup" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/restoreButton"
                style="@style/PinkButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/restore" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

